# manage-vaccinations-in-schools-testing

./: .env.generic  .gitignore  .gitleaksignore  .tool-versions  .yamllint.yaml  README Performance.md  README.md  SECURITY.md  conftest.py  main.py  package-lock.json  package.json  project.code-workspace  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yaml  dependabot.yml
DesktopChrome/: index.html
JMeter/: README.md
containerized_regression_tests_for_PRs/: index.html
k6_performance/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.json  vaccination_processor.py
libs/: __init__.py  api_ops.py  constants.py  file_ops.py  generic_constants.py  mavis_constants.py  organisation.py  playwright_ops.py  test_data.py  testdata_ops.py  wrappers.py
mock-services/: careplus-mock.Dockerfile  careplus_mock_service.py
pages/: __init__.py  children.py  consent.py  consent_doubles.py  consent_hpv.py  dashboard.py  import_records.py  log_in.py  login.py  pg_children.py  pg_consent_doubles.py  pg_consent_hpv.py  pg_dashboard.py  pg_home.py  pg_import_records.py  pg_login.py  pg_parental_consent.py  pg_programmes.py  pg_school_moves.py  pg_sessions.py  pg_unmatched.py  pg_vaccines.py  programmes.py  school_moves.py  sessions.py  unmatched.py  vaccines.py
performance-testing/: urn-mapping.csv
performance-tests/: Dockerfile  base.Dockerfile  entrypoint.sh  give-or-refuse-consent-journey.jmx  nurse-journey.jmx  record-offline-all.jmx  record-offline.jmx  reporting-journey.jmx  run-nurse-journey.sh  upload-cohort-data.jmx
test_data/: ParentalConsent.xlsx  ParentalConsent_Doubles.xlsx  ParentalConsent_HPV.xlsx  file_mapping.csv
tests/: conftest.py  test_00_smoke.py  test_01_log_in.py  test_01_login.py  test_02_sessions.py  test_03_class_list_upload.py  test_03_import_records.py  test_04_cohorts.py  test_04_school_moves.py  test_05_child_list_upload.py  test_05_programmes.py  test_05_programmes_rav.py  test_05_record_a_vaccine_using_ui.py  test_06_vaccines.py  test_06_vaccs_batch.py  test_07_children.py  test_07_record_a_vaccine_using_ui.py  test_08_consent_doubles.py  test_08_online_consent_doubles.py  test_08_vaccs_upload.py  test_09_consent.py  test_09_consent_hpv.py  test_09_online_consent_hpv.py  (+91 more)
(+129374 files in other folders)
